# Demo-Project-for-Jenkins

./: CMakeLists.txt  CMakeLists.txt.in  Code.cpp  CodeTest.cpp  Jenkinsfile  README.md  hello.cpp  pom.xml
